--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "readme": "README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/varun-raj/common-lib.git"
